--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,13 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      # - name: Setup OPA
-      #   uses: open-policy-agent/setup-opa@v2
-      #   with:
-      #     version: latest
+      - name: Setup OPA
+        uses: open-policy-agent/setup-opa@v2
+        with:
+          version: latest
 
-      # - name: Run OPA Tests
-      #   run: opa test policies
+      - name: Run OPA Tests
+        run: opa test policies
 
-      # - name: Run OPA Check
-      #   run: opa check policies
+      - name: Run OPA Check
+        run: opa check policies
